# Atena

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  PROJECT-RAW.md  README.md  ROADMAP.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
.gitnexus/: lbug  lbug.wal
.streamlit/: config.toml
docs/: STATUS.md
docs/changes/: 2026-04-29-001-bootstrap-adr-fondativi.md  2026-04-29-002-hardening-governance.md  2026-04-29-003-vision-capture-adr.md  2026-04-29-004-talos-exposition-iterating.md  2026-04-29-005-talos-iterating-round-2.md  2026-04-29-006-talos-iterating-round-3.md  2026-04-29-007-talos-iterating-round-4.md  2026-04-29-008-talos-iterating-round-5-sweep-finale.md  2026-04-29-009-talos-frozen-declaration.md  2026-04-30-001-promulgazione-adr-stack-0013-0021.md  2026-04-30-002-integrazione-tooling-gitnexus.md  2026-04-30-003-errata-adr-0006-hooks-extension.md  2026-04-30-004-bootstrap-codice-minimale.md  2026-04-30-005-ci-base-github-actions.md  2026-04-30-006-observability-configure-logging.md  2026-04-30-007-persistence-skeleton.md  2026-04-30-008-sessions-model-initial-migration.md  2026-04-30-009-asin-master-model.md  2026-04-30-010-errata-adr-0015-default-implies-not-null.md  2026-04-30-011-listino-items-model-with-fk.md  2026-04-30-012-config-overrides-model-with-rls.md  2026-04-30-013-vgp-results-model.md  2026-04-30-014-cart-items-model.md  2026-04-30-015-panchina-items-model.md  2026-04-30-016-storico-ordini-model-with-rls.md  2026-04-30-017-locked-in-model-with-rls.md  2026-04-30-018-audit-log-model-with-triggers.md  2026-04-30-019-integration-tests-postgres.md  2026-04-30-020-persistence-engine-session.md  2026-04-30-021-db-bootstrap-roles.md  2026-04-30-022-formulas-fee-fba.md  2026-04-30-023-errata-adr-0010-tag-verification.md  2026-04-30-024-chiusura-iss-001-gitnexus-rebuild.md  2026-04-30-025-formulas-cash-inflow.md  2026-04-30-026-formulas-cash-profit-roi.md  2026-04-30-027-vgp-veto-roi.md  2026-04-30-028-chain-e2e-tests.md  2026-04-30-029-config-layer-pydantic-settings.md  2026-04-30-030-engine-via-talos-settings.md  2026-04-30-031-db-bootstrap-via-talos-settings.md  (+110 more)
docs/decisions/: ADR-0001-meta-architettura-adr.md  ADR-0002-test-gate-commit.md  ADR-0003-restore-point-github.md  ADR-0004-cross-reference-documentation.md  ADR-0005-commit-message-convention.md  ADR-0006-git-hooks-enforcement.md  ADR-0007-gitnexus-integration.md  ADR-0008-anti-allucinazione.md  ADR-0010-self-briefing-hardening.md  ADR-0012-project-vision-capture.md  ADR-0013-project-structure.md  ADR-0014-stack-linguaggio-quality-gates.md  ADR-0015-stack-persistenza.md  ADR-0016-stack-ui-streamlit.md  ADR-0017-stack-acquisizione-dati.md  ADR-0018-algoritmo-vgp-tetris.md  ADR-0019-test-strategy-applicativa.md  ADR-0020-cicd-github-actions.md  ADR-0021-logging-telemetria.md  ADR-0022-ghigliottina-tier-profit-filter.md  ADR-0023-90-day-stress-test-filter.md  ADR-0024-amazon-presence-filter.md  FILE-ADR-MAP.md  INDEX.md  TEMPLATE.md
migrations/: env.py
migrations/versions/: 027a145f76a8_create_config_overrides_with_rls.py  1d67de49c197_create_description_resolutions.py  618105641c27_create_panchina_items.py  6e03f2a4f5a3_create_audit_log_with_triggers.py  9d9ebe778e40_create_sessions.py  a074ee67895c_create_storico_ordini_with_rls.py  c9527f017d5c_create_vgp_results.py  d4a7e3cefbb1_create_asin_master.py  d6ab9ffde2a2_create_listino_items.py  e7a92c0260fa_create_locked_in_with_rls.py  e8b80f77961b_fix_config_overrides_unique_nulls_not_.py  e965e1b81041_add_unique_constraint_sessions_tenant_.py  fa6408788e73_create_cart_items.py
scripts/: calibrate_v_tot.py  db_bootstrap.py  setup-dev.sh  setup-hooks.sh
scripts/hooks/: commit-msg  pre-commit  pre-commit-app
src/talos/: __init__.py  orchestrator.py
src/talos/config/: __init__.py  settings.py
src/talos/extract/: __init__.py  acquisition.py  asin_master_writer.py  samsung.py  (+3 more)
tests/: conftest.py
tests/golden/: test_ground_truth_scaler500k.py  test_pipeline_samsung_mini.py
tests/governance/: test_log_events_catalog.py  test_no_root_imports.py
tests/integration/: __init__.py  conftest.py  test_acquire_and_persist.py  test_analytics_repository.py  test_asin_master_writer.py  test_asin_resolver_repository.py  test_audit_triggers.py  test_build_session_input.py  test_config_repository.py  test_dashboard_persistence.py  test_db_bootstrap.py  test_delete_config_override.py  test_find_session_by_hash.py  test_list_recent_sessions.py  test_live_asin_resolver.py  test_live_keepa.py  test_live_playwright.py  test_live_serp.py  test_live_tesseract.py  test_load_session_by_id.py  test_load_session_full.py  test_locked_in_repository.py  test_lookup_to_asin_master.py  test_referral_fee_lookup.py  test_replay_session.py  test_rls_isolation.py  test_session_repository.py  test_session_scope.py  test_storico_ordini_repository.py  test_try_replay_session_ui.py  test_ui_duplicate_check.py
tests/unit/: test_amazon_scraper.py  test_analysis_session_model.py  test_asin_master_model.py  test_asin_resolver_live.py  test_asin_resolver_skeleton.py  test_audit_log_model.py  test_build_asin_master_input.py  test_calibrate_v_tot.py  test_cart_item_model.py  test_cash_inflow.py  test_cash_profit.py  test_compare_session_kpis.py  test_compounding.py  test_config_override_model.py  test_dashboard_anagrafica_export.py  test_dashboard_cart_enriched.py  test_dashboard_cycle_overview.py  test_dashboard_tabs_shell.py  test_dashboard_telemetry_resolve.py  test_document_parser.py  test_events_catalog.py  test_extract_telemetry.py  test_fallback_chain.py  test_fee_fba.py  test_io_extract_telemetry.py  test_io_telemetry.py  test_keepa_client.py  test_listino_input.py  test_listino_input_cache_telemetry.py  test_listino_item_model.py  test_locked_in_item_model.py  test_logging_config.py  test_ocr_pipeline.py  test_orchestrator.py  test_orchestrator_fee_fba_keepa_priority.py  test_orchestrator_referral_fee_override.py  test_panchina_item_model.py  test_panchina_telemetry.py  test_persistence_engine.py  test_persistence_session.py  (+23 more)
(+54 files in other folders)
