# TALOS — Project metadata & quality gates
# Governato da ADR-0013 (Project Structure) + ADR-0014 (Stack Linguaggio & Quality Gates).
# Modifiche non-banali a questo file richiedono change document (ADR-0004).

[project]
name = "talos"
version = "0.1.0"
description = "TALOS — Scaler 500k. Hedge fund algoritmico per FBA Wholesale High-Ticket."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Leader" }]
license = { text = "Proprietario" }
dependencies = [
    # Logging strutturato (ADR-0021) — prima dipendenza runtime, introdotta
    # in CHG-2026-04-30-006. Le altre dipendenze applicative entreranno
    # modulo per modulo, ognuna sotto il proprio ADR di stack:
    #   SQLAlchemy/psycopg/Alembic → ADR-0015
    #   Streamlit                  → ADR-0016
    #   Keepa/Playwright/Tesseract → ADR-0017
    #   pandas/numpy               → ADR-0018
    "structlog>=24.4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.13.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.100.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/talos"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Disabilitate con motivazione (ADR-0014). Da rivisitare se cambia lo scope.
    "D",        # pydocstyle: la disciplina docstring è in ROADMAP, non bloccante in MVP
    "ANN",      # annotazioni: coperte da mypy strict, ANN duplicherebbe
    "COM812",   # in conflitto con ruff format (trailing comma)
    "ISC001",   # in conflitto con ruff format (string concat)
    "FIX",      # consente TODO/FIXME senza fail (sono in ROADMAP)
    "TD003",    # TODO senza issue link non bloccante
    "CPY001",   # copyright header: non richiesto per progetto proprietario interno
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",     # `assert` consentito nei test
    "INP001",   # __init__.py non richiesto in tests/
    "PLR2004",  # magic numbers consentiti nei test
]

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_redundant_casts = true
disallow_untyped_decorators = true
enable_error_code = ["redundant-self", "redundant-expr", "truthy-bool"]
# Plugin sqlalchemy[mypy] (ADR-0014) verrà attivato quando ADR-0015 introdurrà
# i modelli ORM (CHG futuro).

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "unit: test puri (no I/O) — ADR-0019",
    "integration: test con DB / Playwright / OCR — ADR-0019",
    "golden: byte-exact su dataset — ADR-0019",
    "governance: invarianti governance — ADR-0019",
    "slow: test > 5s — ADR-0019",
]

[tool.coverage.run]
source = ["src/talos"]
branch = true

[tool.coverage.report]
# ADR-0019: ≥ 85% totale (bootstrap parte sotto soglia ed entra in vigore quando
# arriva il primo modulo di sostanza; CI lo applicherà via --cov-fail-under).
show_missing = true
skip_covered = false
