# TALOS — Project metadata & quality gates
# Governato da ADR-0013 (Project Structure) + ADR-0014 (Stack Linguaggio & Quality Gates).
# Modifiche non-banali a questo file richiedono change document (ADR-0004).

[project]
name = "talos"
version = "0.1.0"
description = "TALOS — Scaler 500k. Hedge fund algoritmico per FBA Wholesale High-Ticket."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Leader" }]
license = { text = "Proprietario" }
dependencies = [
    # Logging strutturato (ADR-0021) — CHG-2026-04-30-006
    "structlog>=24.4.0",
    # Persistenza (ADR-0015) — CHG-2026-04-30-007 (skeleton)
    "sqlalchemy[mypy]>=2.0.30,<2.1",
    "alembic>=1.13.0,<2",
    "psycopg[binary]>=3.2.0,<4",
    # Algoritmo VGP/Tetris vettoriale (ADR-0018) — CHG-2026-04-30-034
    "numpy>=2.0.0,<3",
    "pandas>=2.2.0,<3",
    # UI cruscotto militare (ADR-0016) — CHG-2026-04-30-040
    "streamlit>=1.40.0,<2",
    # Acquisizione Keepa (ADR-0017, canale 1) — CHG-2026-05-01-001
    "keepa>=1.4.0,<2",
    "tenacity>=8.0.0,<10",
    "pyrate-limiter>=3.0.0,<5",
    # Acquisizione scraping amazon.it (ADR-0017, canale 2) — CHG-2026-05-01-002
    # Chromium NON viene installato qui; va eseguito a parte
    # `uv run playwright install chromium` (~150 MB, scope CHG-005 integratore).
    "playwright>=1.40.0,<2",
    "pyyaml>=6.0,<7",
    # Acquisizione OCR (ADR-0017, canale 3) — CHG-2026-05-01-003
    # tesseract-ocr binary di sistema NON installato qui; richiede
    # `apt install tesseract-ocr tesseract-ocr-ita tesseract-ocr-eng`
    # (scope CHG-005 integratore + README dev setup).
    "pytesseract>=0.3.13,<1",
    # Estrattore Samsung NLP (ADR-0017 + R-05) — CHG-2026-05-01-004
    "rapidfuzz>=3.0,<4",
    "pydantic-settings>=2.14.0",
    "playwright-stealth>=2.0.3",
    # Multi-format upload CFO (CHG-2026-05-02-007) — PDF/XLSX/DOCX
    "pdfplumber>=0.11.0,<1",
    "openpyxl>=3.1.0,<4",
    "python-docx>=1.1.0,<2",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.13.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.100.0",
    # Type stubs per pandas (mypy strict, ADR-0014) — CHG-2026-04-30-034
    "pandas-stubs>=2.2.0",
    # Type stubs per pyyaml (mypy strict, ADR-0014) — CHG-2026-05-01-002
    "types-PyYAML>=6.0,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/talos"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Disabilitate con motivazione (ADR-0014). Da rivisitare se cambia lo scope.
    "D",        # pydocstyle: la disciplina docstring è in ROADMAP, non bloccante in MVP
    "ANN",      # annotazioni: coperte da mypy strict, ANN duplicherebbe
    "COM812",   # in conflitto con ruff format (trailing comma)
    "ISC001",   # in conflitto con ruff format (string concat)
    "FIX",      # consente TODO/FIXME senza fail (sono in ROADMAP)
    "TD003",    # TODO senza issue link non bloccante
    "CPY001",   # copyright header: non richiesto per progetto proprietario interno
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",     # `assert` consentito nei test
    "INP001",   # __init__.py non richiesto in tests/
    "PLR2004",  # magic numbers consentiti nei test
]
"src/talos/persistence/models/**" = [
    # SQLAlchemy 2.0 valuta a runtime le annotazioni `Mapped[T]` per dedurre
    # i tipi colonna; spostare datetime/Decimal in TYPE_CHECKING farebbe
    # fallire l'init con MappedAnnotationError. Documented trade-off.
    "TC003",
]

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_redundant_casts = true
disallow_untyped_decorators = true
enable_error_code = ["redundant-self", "redundant-expr", "truthy-bool"]
# ADR-0014: plugin sqlalchemy[mypy] attivato in CHG-2026-04-30-007 con
# l'introduzione di src/talos/persistence/.
plugins = ["sqlalchemy.ext.mypy.plugin"]

# Librerie senza py.typed marker (ADR-0014 deroga documentata).
# pdfplumber + python-docx (CHG-2026-05-02-007): no stubs ufficiali per pdfplumber.
# python-docx ha tipi parziali. Override mypy per ignore_missing_imports.
[[tool.mypy.overrides]]
module = ["pdfplumber", "pdfplumber.*", "docx", "docx.*"]
ignore_missing_imports = true

# pytesseract (CHG-2026-05-01-003): no stubs ufficiali. Importato dal
# `_LiveTesseractAdapter` (live ratificato in CHG-2026-05-01-011).
# playwright-stealth (CHG-2026-05-01-012): plugin community, no stubs.
# Importato dal `_PlaywrightBrowserPage` (live ratificato in CHG-012).
[[tool.mypy.overrides]]
module = ["pytesseract.*", "playwright_stealth.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "unit: test puri (no I/O) — ADR-0019",
    "integration: test con DB / Playwright / OCR — ADR-0019",
    "golden: byte-exact su dataset — ADR-0019",
    "governance: invarianti governance — ADR-0019",
    "slow: test > 5s — ADR-0019",
]

[tool.coverage.run]
source = ["src/talos"]
branch = true

[tool.coverage.report]
# ADR-0019: ≥ 85% totale (bootstrap parte sotto soglia ed entra in vigore quando
# arriva il primo modulo di sostanza; CI lo applicherà via --cov-fail-under).
show_missing = true
skip_covered = false
